--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,10 +41,12 @@ dependencies {
     implementation project(":product_list")
     implementation project(":product_details")
     implementation project(":shared_navigation")
+    implementation project(":myCart")
 
     // Navigation
     implementation("androidx.navigation:navigation-fragment-ktx:2.5.3")
     implementation("androidx.navigation:navigation-ui-ktx:2.5.3")
+    implementation project(path: ':myCart')
 
     // Koin
     def koin_ksp_version = "1.0.3"
